# my-own-realtime-transcription-api

./: .gitignore  2026-01-10.ipynb  README.MD  README_CN.MD  df_full.csv  emb_server.py  main.py  pyproject.toml  realtime.py  requirements.txt  transcript.txt
