[project]
name = "openai-realtimeapidemopythonpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "lab>=8.6",
    "pandas>=2.3.3",
    "pyaudio>=0.2.14",
    "pysocks>=1.7.1",
    "websocket-client>=1.9.0",
    "openai",
    "fastapi[standard]>=0.128.0",
]
